--- a/package.json
+++ b/package.json
@@ -14,42 +14,43 @@
     "@angular/animations": "^6.1.3",
     "@angular/cdk": "^6.4.5",
     "@angular/common": "^6.1.3",
-    "@angular/compiler": "^6.1.3",
+    "@angular/compiler": "^8.2.14",
     "@angular/core": "^6.1.3",
     "@angular/forms": "^6.1.3",
     "@angular/http": "^6.1.3",
     "@angular/material": "^6.4.5",
     "@angular/platform-browser": "^6.1.3",
-    "@angular/platform-browser-dynamic": "^6.1.3",
     "@angular/pwa": "^0.6.5",
     "@angular/router": "^6.1.3",
     "@angular/service-worker": "^6.1.3",
-    "bootstrap-css-only": "^4.3.1",
     "@types/sprintf-js": "^1.1.2",
+    "ajv": "^6.10.2",
     "angular-calendar": "^0.28.0",
+    "bootstrap-css-only": "^4.3.1",
     "core-js": "^2.5.4",
     "date-fns": "^2.7.0",
     "flatpickr": "^4.6.3",
     "font-awesome": "^4.7.0",
-    "highlightjs-loader": "^0.2.3",
     "ngx-order-pipe": "^2.0.4",
     "ngx-perfect-scrollbar": "^8.0.0",
     "rxjs": "^6.2.2",
+    "rxjs-tslint": "^0.1.7",
+    "serialize-javascript": "^2.1.1",
+    "tar-fs": "^2.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/cli": "~6.1.3",
-    "@angular/compiler-cli": "^6.1.3",
+    "@angular-devkit/build-angular": "^0.803.20",
+    "@angular/cli": "^8.3.20",
+    "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^6.1.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "angular-ide": "^0.9.66",
-    "codelyzer": "~4.2.1",
+    "angular-ide": "^0.9.70",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.0.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
@@ -57,6 +58,6 @@
     "protractor": "^5.4.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.9.2"
+    "typescript": "^3.4.5"
   }
 }
