--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "http-browserify": "^1.7.0",
     "https": "^1.0.0",
     "https-browserify": "^1.0.0",
+    "moment": "^2.29.2",
     "net": "^1.0.2",
     "ngx-order-pipe": "^2.2.0",
     "os": "^0.1.2",
@@ -49,13 +50,13 @@
     "sprintf-js": "^1.1.2",
     "stream": "^0.0.2",
     "stream-browserify": "^3.0.0",
+    "tar-fs": "^1.16.2",
     "tls": "^0.0.1",
     "url": "^0.11.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.1",
-    "@types/node": "^18.11.18",
-    "angular-ide": "^0.9.77"
+    "@types/node": "^18.11.18"
   },
   "browser": {
     "crypto": false,
