--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "My Pets App",
-  "short_name": "My Pets",
+  "name": "ICCM EU Schedule",
+  "short_name": "ICCM-EU",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
